--- a/src/index.css
+++ b/src/index.css
@@ -3,4 +3,12 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
+  text-align: center;
+}
+
+li {
+  list-style: none;
+}
+
+.vehicle {
 }
