--- a/src/index.css
+++ b/src/index.css
@@ -4,11 +4,63 @@ body {
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   text-align: center;
+  background-color: #619787;
+}
+
+h1 {
+  font-size: 60px;
+  padding: 0;
+}
+
+ul {
+  padding: 0;
 }
 
 li {
   list-style: none;
+  border-style: solid;
+  border-width: 1px;
+  border-radius: 5px;
+  box-shadow: 3px 3px 10px black;
+  background-color: #9dcdc0;
+  max-width: 60%;
+  align-self: center;
 }
 
 .vehicle {
+  margin: 50px auto;
+  padding: 0px 20px;
+}
+
+form {
+  border-style: solid;
+  border-width: 1px;
+  border-radius: 5px;
+  box-shadow: 3px 3px 10px black;
+  background-color: #9dcdc0;
+  max-width: 50%;
+  margin: 0px auto 50px auto;
+  font-size: larger;
+  font-weight: bold;
+  padding: 20px 0px 20px 0px;
+}
+
+form label {
+  margin: 10px auto 0px auto;
+  display: block;
+}
+
+form textarea {
+  margin-bottom: 20px;
+  background-color: rgb(219, 242, 242);
+  width: 300px;
+  padding: 10px;
+}
+
+form input {
+  background-color: rgb(219, 242, 242);
+  border-style: inherit;
+  border-width: 1px;
+  width: 300px;
+  padding: 10px;
 }
